WexGit/Wex_DX/force-app/main/default/objects/Collections_Invoice_LineItem__c/Collections_Invoice_LineItem__c.object-meta.xml
<CustomObject>
    <label>Collections Invoice Line Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collections Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>