WexGit/Wex_DX/force-app/main/default/objects/Collections_Invoice_LineItem__c/fields/Collections_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Collections_Invoice__c</fullName>
    <label>Collections Invoice</label>
    <referenceTo>Collections_Invoice__c</referenceTo>
    <relationshipName>Collections_Invoice</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>