WexGit/Wex_DX/force-app/main/default/objects/Collections_Invoice_LineItem__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>