WexGit/Wex_DX/force-app/main/default/objects/Collections_Invoice_LineItem__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Item Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>